Latin-1 source code was not being properly decoded when passed through compile(). This was due to left-over special-casing before UTF-8 became the default source encoding.

Closes issue #3574. Thanks to Victor Stinner for help with the patch.